# hoo

AgenticAIA2A/: package-lock.json  package.json  pyproject.toml  replit.md
AgenticAIA2A/attached_assets/: Mobile PWA Enabled Mobile PWA - Product Requirements Document 16th sep 2025 v2 (1) (1)[1]_1763199816213.docx  Pasted--ABC-Fit-Banker-Complete-AI-Authentication-System-Real-AI-Agents-with-A2A-Protocol-Fully-D-1763200225152_1763200225154.txt
AgenticAIA2A/backend/: main.py
AgenticAIA2A/backend/agents/: a2a_protocol.py  health_agent.py  login_agent.py  logout_agent.py  main_agent.py  profile_agent.py  registration_agent.py
AgenticAIA2A/frontend/: index.html  vite.config.ts
AgenticAIA2A/frontend/src/: App.css  App.tsx
AgenticAIA2A/frontend/src/components/: ChatInterface.tsx
